{
    "name": "BattleInputActions",
    "maps": [
        {
            "name": "Battle",
            "id": "68a36ec1-ae75-4e2d-9762-b1b38e4cad2d",
            "actions": [
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "44b7c751-09fe-4b64-8353-eb8c0561c9b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "38cd0df5-1a81-44e5-9122-bd44977b4284",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dpad",
                    "type": "Value",
                    "id": "97a3ed40-da85-4b87-947e-57c86593a0e6",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "64b2aaf2-69a3-49ff-a31c-79f3877b3c8c",
                    "path": "<Keyboard>/#(K)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4749e538-e839-4b4c-97a6-fb2e33ec0a5d",
                    "path": "<Keyboard>/#(J)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "05106ad4-de03-442c-a5c7-37535724d200",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "de236253-bcfb-4caf-9d4b-36d24bae2a91",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a4fa8ac1-d23d-4b16-9cbb-8fa53685fff2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b7f9e851-3edc-4a69-8896-3ae82c33881c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cffcf15c-9a9e-49e3-97b9-2d2359c9da6c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "e5aa3fb7-5e65-45f7-9dbf-7dc595f0e3a4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2543788b-7fe7-4bed-8e7f-7b647c84d95c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a2603fc1-3bf2-48bb-980f-795bacdef650",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "aae6ff4c-ab2d-4e05-a9ef-dcb2b89bbb9d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "10a253dd-e1b7-4719-a4e8-ceb2bd715a0c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}